--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-react": "^9.4.0",
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^5.62.11",
     "axios": "^1.7.9",
     "ckeditor5": "^44.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
-    "react-router-dom": "^7.1.1"
+    "react-router-dom": "^7.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
