--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
+    "react-secure-storage": "^1.3.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
