--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.1",
     "react-secure-storage": "^1.3.2",
+    "sweetalert2": "^11.15.10",
     "zod": "^3.24.1"
   },
   "devDependencies": {
